Updated testimonials section styling for 4000px+ screen widths

--- a/src/Components/TestimonialsSection/TestimonialsSection.scss
+++ b/src/Components/TestimonialsSection/TestimonialsSection.scss
@@ -219,8 +219,11 @@
               @media (min-width: 800px) and (max-width: 1999px) {
                 margin-bottom: 40px;
               }
-              @media (min-width: 2000px) {
+              @media (min-width: 2000px) and (max-width: 3999px) {
                 margin-bottom: 80px;
+              }
+              @media (min-width: 4000px) {
+                margin-bottom: 104px;
               }
             }
             .testimonial-text {
