Changed the layout of the book page for laptops

--- a/src/Views/SchedulePage/SchedulePage.scss
+++ b/src/Views/SchedulePage/SchedulePage.scss
@@ -14,13 +14,18 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
+  padding: 13rem 19rem;
 
   header {
     position: relative;
   }
 
+  .headline {
+    margin: 3.2rem 0 4rem;
+    align-self: flex-start;
+  }
+
   .calendar {
-    padding: 15rem 10rem;
     text-align: center;
     // min-height: 100%;
     // height: 100%;
