--- a/src/Views/SchedulePage/SchedulePage.scss
+++ b/src/Views/SchedulePage/SchedulePage.scss
@@ -14,22 +14,19 @@
   flex-direction: column;
   height: 100%;
   width: 100%;
-  padding: 13rem 19rem;
+  padding: 20.8rem 19rem;
 
   header {
     position: relative;
   }
 
-  .headline {
-    margin: 3.2rem 0 4rem;
+  .page-heading-container {
     align-self: flex-start;
+    margin-bottom: 4rem;
   }
 
   .calendar {
     text-align: center;
-    // min-height: 100%;
-    // height: 100%;
-    // min-width: 100%;
     flex-direction: column;
     display: flex;
     justify-content: center;
