--- a/src/Components/ReusableComponents/PageHeading.scss
+++ b/src/Components/ReusableComponents/PageHeading.scss
@@ -44,6 +44,16 @@
   font-weight: 400;
 }
 
+.contact-form {
+  .section-title {
+    font-size: 1.6rem;
+  }
+
+  .headline {
+    font-size: 3.3rem;
+  }
+}
+
 /* Media Queries */
 
 @media only screen and (max-width: 299px) {
