--- a/src/Components/ReusableComponents/PageHeading.scss
+++ b/src/Components/ReusableComponents/PageHeading.scss
@@ -27,6 +27,10 @@
   text-transform: uppercase;
   align-items: center;
   color: #686c7e;
+
+  @media (max-width: 599px) {
+    font-size: 2.8rem;
+  }
 }
 
 .headline {
@@ -35,6 +39,11 @@
   font-weight: 700;
   font-size: 4rem;
   text-transform: capitalize;
+
+  @media (max-width: 599px) {
+    font-size: 4.8rem;
+    margin: 6px 0;
+  }
 }
 
 .subtitle {
@@ -42,50 +51,48 @@
   font-size: 3rem;
   line-height: 152%;
   font-weight: 400;
-}
 
-.contact-form {
-  .section-title {
-    font-size: 1.6rem;
-  }
-
-  .headline {
+  @media (max-width: 599px) {
     font-size: 3.3rem;
   }
 }
 
+// .contact-form {
+//   .section-title {
+//     font-size: 1.6rem;
+//   }
+
+//   .headline {
+//     font-size: 3.3rem;
+//   }
+// }
+
 /* Media Queries */
 
-@media only screen and (max-width: 299px) {
-  .section-title {
-    font-size: 2.3rem;
-  }
+// @media only screen and (max-width: 299px) {
+//   .section-title {
+//     font-size: 2.3rem;
+//   }
 
-  .headline {
-    font-size: 3.2rem;
-  }
+//   .headline {
+//     font-size: 3.2rem;
+//   }
 
-  .subtitle {
-    font-size: 2rem;
-  }
-}
+//   .subtitle {
+//     font-size: 2rem;
+//   }
+// }
 
-@media only screen and (min-width: 300px) and (max-width: 399px) {
-  .section-title {
-    font-size: 11px;
-  }
+// @media only screen and (min-width: 300px) and (max-width: 399px) {
+//   .section-title {
+//     font-size: 11px;
+//   }
 
-  .headline {
-    font-size: 4rem;
-  }
+//   .headline {
+//     font-size: 4rem;
+//   }
 
-  .subtitle {
-    font-size: 2.3rem;
-  }
-}
-
-@media (max-width: 599px) {
-  .headline {
-    margin: 12px 0 6px;
-  }
-}
+//   .subtitle {
+//     font-size: 2.3rem;
+//   }
+// }
