--- a/src/Components/ReusableComponents/ContactForm.scss
+++ b/src/Components/ReusableComponents/ContactForm.scss
@@ -6,8 +6,11 @@
   align-items: flex-start;
   width: 50vw;
 
-  @media (max-width: 699px) {
+  @media (max-width: 599px) {
     width: 85%;
+  }
+  @media (min-width: 600px) and (max-width: 999px) {
+    width: 100%;
   }
   @media only screen and (min-width: 700px) and (max-width: 899px) {
     padding: 0 80px;
@@ -117,11 +120,8 @@
     margin-top: 8rem;
     width: 50vw;
 
-    @media (max-width: 699px) {
+    @media (max-width: 999px) {
       width: 100%;
-    }
-    @media only screen and (min-width: 900px) and (max-width: 999px) {
-      width: 82vw;
     }
   }
 
