--- a/src/Components/ReusableComponents/PageHeading.scss
+++ b/src/Components/ReusableComponents/PageHeading.scss
@@ -31,10 +31,13 @@
   @media (max-width: 999px) {
     font-size: 2.8rem;
   }
+  @media (min-width: 2000px) {
+    font-size: 1.6rem;
+  }
 }
 
 .headline {
-  margin: 3.2rem 0 1.6rem;
+  margin: 8px 0;
   color: var(--white);
   font-weight: 700;
   font-size: 4rem;
@@ -43,6 +46,9 @@
   @media (max-width: 999px) {
     font-size: 4.8rem;
     margin: 6px 0;
+  }
+  @media (min-width: 2000px) {
+    font-size: 3.3rem;
   }
 }
 
@@ -54,5 +60,8 @@
 
   @media (max-width: 999px) {
     font-size: 3.3rem;
+  }
+  @media (min-width: 2000px) {
+    font-size: 2.3rem;
   }
 }
