--- a/src/Views/SchedulePage/SchedulePage.scss
+++ b/src/Views/SchedulePage/SchedulePage.scss
@@ -29,6 +29,9 @@
       @media (min-width: 1300px) and (max-width: 1999px) {
         transform: translateX(-11rem);
       }
+      @media (min-width: 2000px) and (max-width: 2999px) {
+        transform: translateX(-4.8rem);
+      }
     }
 
     .book-body {
