Refactored the footer.scss file

--- a/src/Views/SchedulePage/SchedulePage.scss
+++ b/src/Views/SchedulePage/SchedulePage.scss
@@ -17,6 +17,9 @@
     width: 100%;
     margin: 16rem 0;
 
+    @media (max-width: 599px) {
+      margin: 0;
+    }
     @media (min-width: 600px) and (max-width: 999px) {
       margin: 88px 0;
     }
