Updated the responsiveness of the hero section for mobile phones

--- a/src/Components/Header/ResponsiveNav.scss
+++ b/src/Components/Header/ResponsiveNav.scss
@@ -11,6 +11,7 @@
     align-items: flex-start;
     justify-content: space-between;
     padding: 8.8rem 8.8rem 0 15rem;
+    z-index: 5;
 
     ul {
       display: flex;
