--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -6,6 +6,22 @@
   border: 8px solid var(--gold);
   border-bottom: none;
   height: 106.2rem;
+
+  @media (max-width: 399px) {
+    height: 360px;
+    border-width: 4px;
+    border-bottom: 4px solid var(--gold);
+  }
+  @media (min-width: 400px) and (max-width: 999px) {
+    border-bottom: 6px solid var(--gold);
+  }
+  @media (max-width: 599px) {
+    height: 400px;
+    border-width: 6px;
+  }
+  @media only screen and (min-width: 2100px) {
+    height: 120rem;
+  }
 }
 
 .hero-container {
@@ -15,21 +31,33 @@
   column-gap: 2.4rem;
   row-gap: 0;
   padding-left: 13rem;
+
+  @media (max-width: 599px) {
+    padding-left: 48px;
+    grid-template-rows: 110px 55px 110px;
+  }
 }
 
 .hero-heading {
   display: flex;
   flex-direction: column;
-  //   margin: 25% 10% 25% 10%;
   grid-column: 1 / span 8;
   grid-row: 3;
   z-index: 1;
+
+  @media only screen and (min-width: 2100px) {
+    transform: translateY(13rem);
+  }
 }
 
 h1 {
   font-weight: 700;
   font-size: 9.9rem;
   color: var(--white);
+
+  @media (max-width: 499px) {
+    font-size: 8.2rem;
+  }
 }
 
 .subheading {
@@ -37,6 +65,10 @@ h1 {
   font-size: 3.3rem;
   color: var(--white);
   text-transform: capitalize;
+
+  @media (max-width: 499px) {
+    font-size: 2.8rem;
+  }
 }
 
 .book:link,
@@ -55,37 +87,17 @@ h1 {
   transition: all ease-in-out 150ms;
   background-color: var(--white);
   border: none;
+
+  @media (max-width: 599px) {
+    padding: 8px;
+    font-size: 9px;
+    height: 24px;
+    width: 105px;
+    margin-top: 40px;
+  }
 }
 
 .book:hover,
 .book:active {
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-}
-
-// Media Queries
-
-@media only screen and (max-width: 1299px) {
-  h1 {
-    font-size: 8.2rem;
-  }
-
-  .subheading {
-    font-size: 2.8rem;
-  }
-
-  .book {
-    font-size: 1.9rem;
-    height: 5rem;
-    width: 20rem;
-  }
-}
-
-@media only screen and (min-width: 2100px) {
-  .hero-section {
-    height: 120rem;
-  }
-
-  .hero-heading {
-    transform: translateY(13rem);
-  }
 }
