--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -19,6 +19,9 @@
     height: 400px;
     border-width: 6px;
   }
+  @media (min-width: 600px) and (max-width: 799px) {
+    height: 520px;
+  }
   @media only screen and (min-width: 2100px) {
     height: 120rem;
   }
@@ -35,6 +38,10 @@
   @media (max-width: 599px) {
     padding-left: 48px;
     grid-template-rows: 110px 55px 110px;
+  }
+  @media (min-width: 600px) and (max-width: 799px) {
+    padding-left: 72px;
+    grid-template-rows: 185px 92px 185px;
   }
 }
 
@@ -94,6 +101,11 @@ h1 {
     height: 24px;
     width: 105px;
     margin-top: 40px;
+  }
+  @media (min-width: 600px) and (max-width: 799px) {
+    margin-top: 40px;
+    width: 160px;
+    height: 36px;
   }
 }
 
