Updated the hero section's responsive styling for all screen widths

--- a/src/Components/HeroSection/HeroSection.scss
+++ b/src/Components/HeroSection/HeroSection.scss
@@ -25,6 +25,9 @@
   @media (min-width: 800px) and (max-width: 999px) {
     height: 760px;
   }
+  @media (min-width: 1800px) and (max-width: 1999px) {
+    height: 1160px;
+  }
   @media only screen and (min-width: 2100px) {
     height: 120rem;
   }
