--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -6,75 +6,55 @@ header {
   width: 100vw;
   position: relative;
 
+  @media only screen and (min-width: 250px) and (max-width: 999px) {
+    padding: 0 24px 0 8px;
+  }
+  @media only screen and (min-width: 1000px) and (max-width: 3999px) {
+    padding: 0 54px 0 8px;
+  }
+  @media (min-width: 4000px) {
+    padding: 0 104px 0 8px;
+  }
+
   .logo {
     height: 15rem;
     width: 15rem;
+
+    @media only screen and (max-width: 399px) {
+      width: 60px;
+      height: 60px;
+    }
+    @media only screen and (min-width: 400px) and (max-width: 499px) {
+      width: 75px;
+      height: 75px;
+    }
+    @media only screen and (min-width: 500px) and (max-width: 699px) {
+      width: 80px;
+      height: 80px;
+    }
+    @media only screen and (min-width: 700px) and (max-width: 899px) {
+      width: 94px;
+      height: 94px;
+    }
   }
 
   .menu-icon {
     height: 3rem;
     width: 3.2rem;
-  }
-}
 
-/* Media Queries */
-
-@media only screen and (min-width: 250px) and (max-width: 999px) {
-  header {
-    padding: 0 24px 0 8px;
-  }
-}
-
-@media only screen and (max-width: 399px) {
-  header {
-    .logo {
-      width: 60px;
-      height: 60px;
-    }
-
-    .menu-icon {
+    @media only screen and (max-width: 399px) {
       width: 16px;
       height: 14px;
     }
-  }
-}
-
-@media only screen and (min-width: 400px) and (max-width: 499px) {
-  header {
-    .logo {
-      width: 75px;
-      height: 75px;
-    }
-
-    .menu-icon {
+    @media only screen and (min-width: 400px) and (max-width: 499px) {
       width: 20px;
       height: 18px;
     }
-  }
-}
-
-@media only screen and (min-width: 500px) and (max-width: 699px) {
-  header {
-    .logo {
-      width: 80px;
-      height: 80px;
-    }
-
-    .menu-icon {
+    @media only screen and (min-width: 500px) and (max-width: 699px) {
       width: 22px;
       height: 19px;
     }
-  }
-}
-
-@media only screen and (min-width: 700px) and (max-width: 899px) {
-  header {
-    .logo {
-      width: 94px;
-      height: 94px;
-    }
-
-    .menu-icon {
+    @media only screen and (min-width: 700px) and (max-width: 899px) {
       width: 22px;
       height: 20px;
     }
@@ -95,10 +75,6 @@ header {
 }
 
 @media only screen and (min-width: 1000px) {
-  header {
-    padding: 0 54px 0 8px;
-  }
-
   #standard {
     display: block;
   }
